refactor: 2,3,4,5 리팩토링
# Conflicts:
#	src/main/java/view/ResultView.java